--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -20,6 +20,7 @@
     @media (max-width: $tablet)
       font-size: 12px
       margin-left: 20px
+      margin-top: 10px
     & img
       width: 96px
       height: 50px
