--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -6,6 +6,7 @@
     background: url('../img/background.png') center no-repeat
     margin: 0 auto
     border: 1px solid #F0F5FB
+    width: 100%
     max-height: 880px
     @media (max-width: $desktop-full)
       width: 95%
@@ -90,6 +91,9 @@
 
   &__tel
     font-size: 18px
+    @media (max-width: $tablet)
+      padding-top: 20px
+
   &__time
     @media (max-width: $tablet)
       display: none
