--- a/src/sass/blocks/_menu.sass
+++ b/src/sass/blocks/_menu.sass
@@ -2,6 +2,10 @@
   position: relative
   margin: 0 auto
   margin-top: 40px
+  @media (max-width: $desktop-full)
+    margin: 0 40px
+  @media (max-width: $desktop)
+    margin: 0 20px
   @media (max-width: $tablet)
     margin: 0 20px
 
@@ -11,48 +15,55 @@
     margin-top: 50px
     @media (max-width: $mobile)
       font-size: 24px
+
   &__group
     display: flex
     justify-content: space-around
     align-items: center
+    width: 90%
+    margin: 0 auto
     @media (max-width: $mobile)
-      flex-direction: column
+      width: 95%
+      flex-wrap: wrap
+      justify-content: start
 
     & a
+      display: flex
+      align-items: center
+      justify-content: center
       font-size: 16px
       border: 1px solid #ECEEF6
       background-color: #ECEEF6
       color: $dark
-      width: 135px
+      width: 235px
       height: 55px
       border-radius: 45px
       text-decoration: none
       margin-bottom: 50px
       margin-top: 50px
-      margin-right: 20px
-      padding: 10px 15px
+      margin-right: 10px
+      padding: 10px 25px
 
       font-family: 'Montserrat-SemiBold', sans-serif
-      display: flex
-      align-items: center
-      justify-content: center
       @media (max-width: $tablet)
         width: 80px
       @media (max-width: $mobile)
         margin-top: 10px
         margin-bottom: 0
+        margin-right: 5px
+
     & a:first-child
-      margin-left: 300px
-      @media (max-width: $tablet)
+      margin-left: 200px
+      @media (max-width: $desktop)
         margin-left: 0
 
 
     & a:last-child
-      margin-right: 300px
-      @media (max-width: $tablet)
+      margin-right: 200px
+      @media (max-width: $desktop)
         margin-right: 0
-      @media (max-width: $mobile)
-        margin-bottom: 10px
+
+
     & a:hover
       cursor: pointer
       color: $light
@@ -63,64 +74,101 @@
     flex-wrap: wrap
     justify-content: space-around
     align-items: center
-    width: 100%
+    width: 95%
     margin: 0 auto
+    margin-top: 15px
+    @media (max-width: $tablet)
+      justify-content: start
 
-  &__background-icon1 
+
+  &__background-icon1
     position: absolute
     margin-top: -1050px
+
   &__background-icon2
     position: absolute
     right: 0
     top: 0
+    z-index: -1
 
   &__more
+    margin-bottom: 20px
     & a
       display: block
       text-align: center
+
     & img
       margin-top: 50px
-     
+
       width: 60px
       height: 60px
+
       &:hover
         cursor: pointer
         transform: scale(1.5) rotate(90deg)
- 
+
 .page
   &__element
+    position: relative
     max-width: 260px
     height: 400px
     border: 2px solid #ECEEF7
     border-radius: 15px
     margin-bottom: 20px
     display: flex
-    flex-direction: column 
+    flex-direction: column
     justify-content: center
     align-items: center
+    @media (max-width: $desktop)
+      margin-right: 10px
+      height: 350px
+      width: 25%
+    @media (max-width: $tablet)
+      padding-top: 10px
+      width: 45%
+      height: 340px
+    @media (max-width: $mobile)
+      height: 250px
+      width: auto
+
+
 
     &:hover
       cursor: pointer
       border: 2px solid $primary
-    & p 
+
+    & p
       margin-left: 10px
       font-size: 12px
       align-self: start
 
 
-
-  
-.element 
+.element
   position: relative
   &__foto
     width: 170px
     height: 170px
     margin-top: 20px
+    @media (max-width: $desktop)
+      width: 150px
+      height: 150px
+      margin-top: 10px
+    @media (max-width: $tablet)
+      margin-top: 10px
+    @media (max-width: $mobile)
+      width: 100px
+      height: 100px
+      margin-top: 10px
 
   &__title
     align-self: start
     margin-left: 10px
     margin-top: 20px
+    @media (max-width: $desktop)
+      margin-top: 10px
+    @media (max-width: $mobile)
+      margin-top: 0
+
   &__size
     align-self: flex-end
     margin-right: 10px
@@ -128,25 +176,51 @@
     font-family: 'Montserrat-Regular', sans-serif
     font-size: 12px
     font-weight: normal
+    @media (max-width: $desktop-full)
+      margin-top: -15px
+
   &__price
     font-size: 24px
     font-family: 'Montserrat-Light', sans-serif
     margin-top: 10px
-  
+
   &__absolute-icon
     position: absolute
-    margin-top: -350px 
+    margin-top: -350px
     margin-left: -180px
+    @media (max-width: $desktop-full)
+      margin-top: -340px
+      margin-left: -160px
+    @media (max-width: $desktop)
+      margin-top: -300px
+      margin-left: -100px
+    @media (max-width: $tablet)
+      margin-top: -340px
+      margin-left: -120px
+    @media (max-width: $mobile)
+      margin-top: -220px
+      margin-left: -140px
+
   &__basket
-    widht: 33px
+    width: 33px
     height: 33px
     margin-top: 70px
+    @media (max-width: $desktop-full)
+      margin-top: 50px
+    @media (max-width: $desktop)
+      margin-top: 35px
+    @media (max-width: $tablet)
+      margin-top: 20px
+    @media (max-width: $mobile)
+      margin-top: 10px
+
     &:hover
       cursor: pointer
       transform: scale(1.5)
+
     &:active
-        background-color: $primary
-        border-radius: 50%
+      background-color: $primary
+      border-radius: 50%
 
 .rect
   border: 2px solid #ECEEF6
@@ -156,5 +230,11 @@
   margin-top: 354px
   border-top: none
   border-left: none
+  @media (max-width: $desktop)
+    margin-top: 300px
+  @media (max-width: $tablet)
+    margin-top: 280px
+  @media (max-width: $mobile)
+    display: none
 
   
