--- a/src/sass/blocks/_section-gallery.sass
+++ b/src/sass/blocks/_section-gallery.sass
@@ -1,21 +1,25 @@
 .gallery
-  margin: 0 auto
   position: relative
+  margin: 0 auto
   margin-top: 100px
   margin-bottom: 130px
-  position: relative
+
+
   &__foto
     display: flex
     justify-content: space-between
     align-items: center
     height: 260px
+    width: 100%
+    z-index: 1
+
   &__background-icon3
     position: absolute
     margin-top: -145px
   &__instagram
-    position: absolute
-    top: 12%
-    left: 31%
+    position: relative
+    margin: 0 auto
+    margin-top: -150px
     width: 480px
     height: 180px
     background: linear-gradient(45.04deg, #FD9924 -51.05%, #F65B16 134.89%)
@@ -24,11 +28,14 @@
     display: flex
     justify-content: center
     align-items: center
+    z-index: 999
     @media (max-width: $tablet)
-      width: 70%
-    & a 
+      width: 300px
+
+    & a
+      padding: 0 20px
       height: 140px
-      width: 440px
+      max-width: 440px
       border: 2px solid rgba(255, 255, 255, 0.1)
       border-radius: 15px
       display: flex
@@ -51,7 +58,6 @@
       &:hover
         color: $dark
         transform: scale(1.2)
-    @media (max-width: $desktop)
-      left: 20%
+
 
     
